module10_homework/k8s/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
  - name: nginx
    image: nginx
  hostNetwork: true
  dnsPolicy: Default
