module10_homework/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cncamp-service
  labels:
    app: cncamp
    release: prom-stack
  annotations:
    prometheus.io/scrape: "true"    
    prometheus.io/path: /metrics
    prometheus.io/port: "8000"
spec:
    #type: NodePort
  selector:
    app: cncamp
  ports:
      #    - name: http
      #      port: 8000
      #      nodePort: 30950
      - port: 8000
      - name: metrics
        port: 8000
        targetPort: 8000
        protocol: TCP
