module10_homework/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cncamp-ingress
  annotations:
      kubernetes.io/ingress.class: "nginx"
spec:
  #  tls:
  #    - hosts:
  #        - cncamp.com
  #      secretName: cncamp-tls
  rules:
      - http:
            paths:
              - pathType: Prefix
                path: "/"
                backend:
                  service:
                    name: cncamp-service
                    port:
                      number: 8000
              ## why not work?
              - pathType: Prefix
                path: "/cncamp(/|$)(.*)"
                backend:
                  service:
                    name: cncamp-service
                    port:
                      number: 8000
              - pathType: Prefix
                path : "/grafana"
                backend:
                  service:
                    name:  prom-stack-grafana
                    port:
                      number: 80


              - pathType: Prefix
                path : "/prometheus"
                backend:
                  service:
                    name:  prom-stack-kube-prom-prometheus
                    port:
                      number: 9090
